--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
                 <h2 class="search-header">Products</h2>
                 <input type="text" class="input" id="searchbar" placeholder="search here.."/>
                 <!-- <button class="search" id="search">Search</button> -->
+            </br>
+                <button class="btn btn-price" id="price" value="price">Sort by price</button>
+                <select id="category-filter">
+                    <option value="">All Categories</option>
+                   
+                </select>
             </div>
             <div class="data" id="data">
              
